查询笔记，修复了author_id无效的bug
