# models/ApiResponse.go
@@ -12,6 +12,11 @@ type APINoteCreateSuccessResponse struct {
 	Detail NoteResponse `json:"detail"` //详细信息
 }
 
+type APINotesGetSuccessResponse struct {
+	Code   int             `json:"code"`   //状态码
+	Msg    string          `json:"msg"`    //状态信息
+	Detail []NoteResponse `json:"detail"` //详细信息
+}
 type APINoteFailed struct {
 	Code   int    `json:"code"`
 	Msg    string `json:"msg"`
